# VEngine

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE.md  README.md  build.sh  imgui.ini
.doxygen/: Doxyfile
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/PULL_REQUEST_TEMPLATE/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: VEngine.yml  build-linux.yml  build-windows.yml  check-compilation.yml  check_compilation.yml  tests.yml  update-documentation.yml  update_documentation.yml
assets/: .gitignore  imgui-config.txt
assets/shaders/: fragment_point_light.frag  fragment_shader.frag  vertex_point_light.vert  vertex_shader.vert
cmake/modules/: ClangFormat.cmake  ClangTidy.cmake  MakeDoc.cmake  MakeTests.cmake  PathsAndOptions.cmake  myVariables.cmake
docs/doxygen/: Doxyfile  Doxyfile.in  header.html
docs/html/: Buffer_8hpp_source.html  Camera_8hpp_source.html  Clock_8hpp_source.html  Constant_8hpp_source.html  Descriptors_8hpp_source.html  Device_8hpp_source.html  Engine_8hpp_source.html  FrameCouter_8hpp_source.html  FrameInfo_8hpp_source.html  KeyboardController_8hpp_source.html  Model_8hpp_source.html  Object_8hpp_source.html  PointLightSystem_8hpp_source.html  Random_8hpp_source.html  RenderSystem_8hpp_source.html  Renderer_8hpp_source.html  Shaders_8hpp_source.html  SwapChain_8hpp_source.html  Time_8hpp_source.html  Utils_8hpp_source.html  Window_8hpp_source.html  annotated.html  classes.html  classmyLib_1_1Clock-members.html  classmyLib_1_1Clock.html  classmyLib_1_1Random-members.html  classmyLib_1_1Random.html  classmyLib_1_1Time-members.html  classmyLib_1_1Time.html  classven_1_1Buffer-members.html  classven_1_1Buffer.html  classven_1_1Camera-members.html  classven_1_1Camera.html  classven_1_1DescriptorPool-members.html  classven_1_1DescriptorPool.html  classven_1_1DescriptorPool_1_1Builder-members.html  classven_1_1DescriptorPool_1_1Builder.html  classven_1_1DescriptorSetLayout-members.html  classven_1_1DescriptorSetLayout.html  classven_1_1DescriptorSetLayout_1_1Builder-members.html  (+66 more)
documentation/.doxygen/: Doxyfile
include/VEngine/: Buffer.hpp  Camera.hpp  Colors.hpp  Constant.hpp  Descriptors.hpp  Device.hpp  Engine.hpp  EventManager.hpp  FrameCounter.hpp  FrameCouter.hpp  FrameInfo.hpp  Gui.hpp  ImGuiWindowManager.hpp  KeyboardController.hpp  Light.hpp  Model.hpp  Object.hpp  PluginLoader.hpp  RenderSystem.hpp  Renderer.hpp  SceneManager.hpp  Shader.hpp  Shaders.hpp  SwapChain.hpp  Texture.hpp  Transform3D.hpp  Transform3DComponent.hpp  Utils.hpp  (+1 more)
lib/: CMakeLists.txt
scripts/: build.sh  install-dependencies.sh
shaders/: CMakeLists.txt
src/: ImGuiWindowManager.cpp  SceneManager.cpp  buffer.cpp  camera.cpp  descriptors.cpp  device.cpp  engine.cpp  eventManager.cpp  imgui.cpp  keyboardController.cpp  light.cpp  main.cpp  model.cpp  object.cpp  pluginLoader.cpp  renderSystem.cpp  renderer.cpp  sceneManager.cpp  shader.cpp  shaders.cpp  swapChain.cpp  texture.cpp  transform3DComponent.cpp  window.cpp
tools/: build.sh  install-dependencies.sh
(+148 files in other folders)
